--- a/Selenium Project/pom.xml
+++ b/Selenium Project/pom.xml
@@ -2,18 +2,18 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>Marsh_Tests</groupId>
-  <artifactId>Marsh_AEM</artifactId>
+  <groupId>pal_Tests</groupId>
+  <artifactId>Selenium_Project</artifactId>
   <version>1.0-SNAPSHOT</version>
   <packaging>jar</packaging>
 
-  <name>Marsh_AEM</name>
+  <name>Selenium Project</name>
   <url>http://maven.apache.org</url>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <maven.compiler.source>1.8</maven.compiler.source>
-    <maven.compiler.target>1.8</maven.compiler.target>
+    <maven.compiler.source>11</maven.compiler.source>
+    <maven.compiler.target>11</maven.compiler.target>
   </properties>
 
 <dependencies>
@@ -43,11 +43,12 @@
 <artifactId>xmlbeans</artifactId>
 <version>2.3.0</version>
 </dependency>
+<!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
 <dependency>
-        <groupId>org.seleniumhq.selenium</groupId>
-        <artifactId>selenium-java</artifactId>
-        <version>3.14.0</version>
-    </dependency>
+    <groupId>org.seleniumhq.selenium</groupId>
+    <artifactId>selenium-java</artifactId>
+    <version>4.34.0</version>
+</dependency>
 <dependency>
 <groupId>com.relevantcodes</groupId>
 <artifactId>extentreports</artifactId>
