--- a/Selenium Project/src/test/repository/project.properties
+++ b/Selenium Project/src/test/repository/project.properties
@@ -1,14 +1,16 @@
 ######This file contains all the element locators of AEM and Publish instance.#####
 
 ## URL##
-Url=https://www.gmail.com
+Url=https://demowebshop.tricentis.com/
 
 
 ## Sign in Locators ##
-username_id=username
-password_id=password
-SigninButton_xpath=//button[@id= 'submit-button']
+username_id=Email
+password_id=Password
+
 
 ######Touch UI locators#####
-UserIcon_xpath=
-UserIcon_xpath=
+logIn_css=a.ico-login
+logInButton_xpath= //input[@value='Log in']
+logOut_css= a.ico-logout
+accountName_xpath=//div[@class='header-links']//a[@class='account']
